[tool.poetry]
name = "bolt"
version = "0.1.0"
description = "A dead simple (and probably broken) playlist file converter for converting .m3u8 playlists to Dopamine's .m3u playlist format."
authors = ["Zikora Ogbuagu <robbie89339@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cx-Freeze = "^6.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
